welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:5: error: Unit does not take parameters
for (i <- 1 to 4) { dogHouse();avance(4) } 
                            ^MethodsDogHouse:11: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:17: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:27: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:37: error: Unit does not take parameters
		dogHouse();		
                        ^